--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
-<style>
+<head>
+	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
+	<style>
 
 .container-image {
     position:relative;
@@ -129,8 +131,6 @@
     grid-area:stats;
 }
 </style>
-<head>
-</head>
 <body>
 TESTING 
 TESTING
