--- a/index.html
+++ b/index.html
@@ -132,8 +132,14 @@
 }
 </style>
 <body>
-TESTING 
-TESTING
-eyo
+<div class="container-image">
+    <h1 class="strokedtext"> cliffisverybored </h1>
+    <h1 class="strokedtexthighlight"> cliffisverybored </h1>
+    <h1 class="strokedtext"> cliffisverybored </h1>
+    <h1 class="strokedtexthighlight"> cliffisverybored </h1>
+    <h1 class="strokedtext"> cliffisverybored </h1>
+    <h1 class="strokedtexthighlight"> cliffisverybored </h1>
+    <h1 class="strokedtext"> cliffisverybored </h1>
+    </div>
 </body>
 </html>
