--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 }
 </style>
 <body>
+	<div class="parallax">
 <div class="container-image">
     <h1 class="strokedtext"> cliffisverybored </h1>
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
@@ -141,5 +142,6 @@
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
     <h1 class="strokedtext"> cliffisverybored </h1>
     </div>
+</div>
 </body>
 </html>
