--- a/index.html
+++ b/index.html
@@ -131,8 +131,7 @@
     grid-area:stats;
 }
 </style>
-<body>
-	<div class="parallax">
+<body style="background-color:orange;">
 <div class="container-image">
     <h1 class="strokedtext"> cliffisverybored </h1>
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
@@ -142,6 +141,5 @@
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
     <h1 class="strokedtext"> cliffisverybored </h1>
     </div>
-</div>
 </body>
 </html>
