--- a/index.html
+++ b/index.html
@@ -1,137 +1,15 @@
 <html>
 <head>
+	<meta charset="UTF-8">
+
 	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
+	<link rel = 'stylesheet' href="style.css">
 	<style>
 
-.container-image {
-    position:relative;
-    width:70%;
-    min-width:1000px;
-    padding-top:100px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: auto;
-    border-bottom: 20px solid black;
-}
-.image {
-  display: block;
-  width: 100%;
-  height: auto;
-}
-
-.overlay {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  height: 100%;
-  width: 100%;
-  opacity: 0;
-  transition: .5s ease;
-  background-color: #FFFFFF;
-}
-
-.container:hover .overlay {
-  opacity: 0.6;
-}
-
-.text {
-  background-color: #FFFFFF;
-  color: black;
-  font-size: 20px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.strokedtext {
-    position: relative;
-    top:50%
-    left:50%
-    transform:translate(-50%,-50%);
-    margin-top:-75px;
-    padding: 0;
-    color: #000;
-    font-family:sans-serif;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-size: 6em;
-    -webkit-text-fill-color: transparent;
-    -webkit-text-stroke-width:2px;
-}
-
-.parallax {
-  /* The image used */
-  background-image: url('{{asset('media/pictures/background.jpg')}}');
-
-  /* Full height */
-  height: 100%; 
-
-  /* Create the parallax scrolling effect */
-  background-attachment: fixed;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.strokedtexthighlight {
-    position: relative;
-    top:50%
-    left:50%
-    transform:translate(-50%,-50%);
-    margin-top:-70px;
-    padding: 0;
-    color: #000;
-    font-family:sans-serif;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    font-size: 6em;
-    -webkit-text-fill-color: white;
-    z-index: 1;
-}
-
-.card {
-    display: grid;
-    grid-template-columns: 300px;
-    grid-template-rows: 210px 210px 80px;
-    grid-template-areas: "image" "text" "stats"
-    font-family: roboto;
-    border-radius: 18p;
-    background: white;
-    box-shadow: 5px 5px 15 px rgba(0,0,0,0.9);
-    text-align:center;
-}
-
-.card-image{
-    grid-area: image;
-    background: url('{{asset('media/pictures/background.jpg')}}');
-    border-top-left-radius:15px;
-    border-top-right-radius:15px;
-    background-size:cover;
-}
-.card-text{
-    grid-area:text;
-    margin:25px
-}
-.card-text .date{
-    color: rgb(255,7,110);
-    font-size: 13px;
-}
-.card-text p{
-    color: frey;
-    font-size: 15px;
-    font-weight:300;
-}
-.card-stats{
-    grid-area:stats;
-}
 </style>
 <body style="background-color:orange;">
+<div class="highest">
+<div class="rellaxparallax-el" data-rellax-speed="5">
 <div class="container-image">
     <h1 class="strokedtext"> cliffisverybored </h1>
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
@@ -141,5 +19,15 @@
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
     <h1 class="strokedtext"> cliffisverybored </h1>
     </div>
+</div>
+<div class="content">
+<center>
+	<h1> Pretty cool </h1>
+</center>
+</div>
+<script src="rellax.min.js"></script>
+<script type="text/javascript">
+	var rellax = new Rellax('.rellax');
+</script>
 </body>
 </html>
