--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
 	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
 	<link rel = 'stylesheet' href="style.css">
-	<style>
 
-</style>
+</head>
 <body style="background-color:orange;">
-<div class="highest">
+<div class="highest"></div>
 <div class="rellax parallax-el" data-rellax-speed="5">
 <div class="container-image">
     <h1 class="strokedtext"> cliffisverybored </h1>
