--- a/index.html
+++ b/index.html
@@ -8,9 +8,36 @@
 	<link rel = 'stylesheet' href="style.css">
 
 </head>
-<body style="background-color:orange;">
-<div class="highest"></div>
-<div class="rellax parallax-el" data-rellax-speed="5">
+<body>
+	<body>
+  <div class="grid">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-offset-1 col-md-2">
+          <div class="grid-line"></div>
+        </div>
+        <div class="col-md-2">
+          <div class="grid-line"></div>
+        </div>
+        <div class="col-md-2">
+          <div class="grid-line"></div>
+        </div>
+        <div class="col-md-2">
+          <div class="grid-line"></div>
+        </div>
+        <div class="col-md-2">
+          <div class="grid-line" style="margin-right:-30px;border-right:1px solid #ccc"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="fixed-top rellax" data-rellax-speed="-2" data-rellax-xs-speed="-5" data-rellax-mobile-speed="3"
+    data-rellax-tablet-speed="-8" style="transform: rotate(45deg);">
+  </div>
+
+<div class="rellax highest" data-rellax-speed="3"></div>
+<div class="rellax parallax-el" data-rellax-speed="27">
 <div class="container-image">
     <h1 class="strokedtext"> cliffisverybored </h1>
     <h1 class="strokedtexthighlight"> cliffisverybored </h1>
@@ -21,7 +48,54 @@
     <h1 class="strokedtext"> cliffisverybored </h1>
     </div>
 </div>
-<div class="content">
+<div class="rellax front" data-rellax-speed="5"></div>
+<div class="rellax veryfront" data-rellax-speed="4"></div>
+<nav class="navTransparent">
+			<p><a href="#top">Cliff Tangel</a></p>
+			<ul>
+				<li><a href="#about">About Me</a></li>
+				<li><a href="#work">My Work</a></li>
+				<li><a href="#art">Art</a></li>
+				<li><a href="#contact">Contact</a></li>
+			</ul>
+		</nav>
+
+        <div class="container">
+          <div class="row">
+
+            <div class="col-md-offset-1 col-md-9">
+              <div class="lg-green rellax" data-rellax-speed="2" data-rellax-xs-speed="1" data-rellax-mobile-speed="2"
+                data-rellax-tablet-speed="2" style="transform: rotate(45deg);">
+              </div>
+              <div class="sm-green rellax" data-rellax-speed="5" data-rellax-xs-speed="3" data-rellax-mobile-speed="4"
+                data-rellax-tablet-speed="5" style="transform: rotate(45deg);">
+              </div>
+            </div>
+
+            <div class="col-md-offset-2 col-md-1">
+              <div class="sm-purple rellax" data-rellax-speed="2" data-rellax-xs-speed="1" data-rellax-mobile-speed="2"
+                data-rellax-tablet-speed="2" style="transform: rotate(45deg);">
+              </div>
+            </div>
+
+            <div class="col-md-offset-3 col-md-1">
+              <div class="xs-green rellax" data-rellax-speed="5" data-rellax-xs-speed="3" data-rellax-mobile-speed="4"
+                data-rellax-tablet-speed="5" style="transform: rotate(45deg);">
+              </div>
+              <div class="md-green rellax" data-rellax-speed="1" data-rellax-xs-speed="1" data-rellax-mobile-speed="2"
+                data-rellax-tablet-speed="2" style="transform: rotate(45deg);">
+              </div>
+            </div>
+
+            <div class="col-md-1">
+              <div class="lg-purple rellax" data-rellax-speed="3" data-rellax-xs-speed="2" data-rellax-mobile-speed="2"
+                data-rellax-tablet-speed="3" style="transform: rotate(45deg);">
+              </div>
+            </div>
+
+          </div>
+        </div>
+
 	<h1> Pretty cool </h1>
 
 	<h3> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Nibh sit amet commodo nulla facilisi nullam vehicula ipsum a. Pellentesque diam volutpat commodo sed. Scelerisque fermentum dui faucibus in ornare quam viverra. Laoreet id donec ultrices tincidunt arcu non sodales neque. Bibendum at varius vel pharetra vel. Volutpat maecenas volutpat blandit aliquam. Dictum fusce ut placerat orci. At consectetur lorem donec massa sapien faucibus et molestie. Odio morbi quis commodo odio aenean sed adipiscing diam donec. Nulla at volutpat diam ut venenatis tellus in. Eget felis eget nunc lobortis mattis. Phasellus faucibus scelerisque eleifend donec.
@@ -31,11 +105,19 @@ Viverra suspendisse potenti nullam ac. Integer malesuada nunc vel risus commodo 
 Porttitor massa id neque aliquam vestibulum morbi blandit cursus risus. Et ligula ullamcorper malesuada proin libero nunc consequat interdum. Justo laoreet sit amet cursus sit amet dictum sit. Vitae justo eget magna fermentum iaculis. Quisque egestas diam in arcu cursus. Velit ut tortor pretium viverra suspendisse potenti nullam. Ultricies tristique nulla aliquet enim tortor at auctor urna. Morbi tristique senectus et netus et malesuada. Morbi non arcu risus quis varius quam quisque. Amet massa vitae tortor condimentum lacinia quis vel. Id faucibus nisl tincidunt eget. Fusce id velit ut tortor pretium viverra suspendisse. Ultrices neque ornare aenean euismod elementum nisi. Tincidunt arcu non sodales neque sodales ut etiam. Risus nec feugiat in fermentum posuere urna. Id porta nibh venenatis cras sed felis. Viverra vitae congue eu consequat ac felis. Elit ut aliquam purus sit amet luctus venenatis lectus magna.
 
 Fermentum iaculis eu non diam phasellus vestibulum. Nibh praesent tristique magna sit amet purus gravida. Duis ut diam quam nulla porttitor. Laoreet non curabitur gravida arcu. Maecenas accumsan lacus vel facilisis. Velit laoreet id donec ultrices tincidunt arcu non sodales. Lectus quam id leo in vitae turpis massa sed elementum. Magna fermentum iaculis eu non. Interdum consectetur libero id faucibus nisl tincidunt eget. Amet mauris commodo quis imperdiet massa. At urna condimentum mattis pellentesque id nibh. Et pharetra pharetra massa massa ultricies mi quis hendrerit dolor. Malesuada nunc vel risus commodo viverra. Aliquet nibh praesent tristique magna sit amet. Eget dolor morbi non arcu risus quis varius quam quisque. Duis tristique sollicitudin nibh sit amet. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis. Ultrices gravida dictum fusce ut placerat orci nulla pellentesque. Non odio euismod lacinia at quis risus sed. Nibh tortor id aliquet lectus proin nibh nisl condimentum.<h3>
-</div>
-<script src="js/scroll.js"></script>
-<script src="rellax.min.js"></script>
-<script type="text/javascript">
-	var rellax = new Rellax('.rellax');
-</script>
+	<script language="javascript" src='js/jquery-3.5.1.min.js' type="text/javascript"></script>
+	<script src="js/scroll.js"></script>
+	<script src="rellax.min.js"></script>
+	<script type="text/javascript">
+		var rellax = new Rellax('.rellax');
+		horizontal: false
+		vertical: true
+	</script>
+<!-- 	<script type="text/javascript">
+		var horellax = new Rellax('.horellax');
+		horizontal: true
+		vertical: false
+	</script>
+ -->
 </body>
 </html>
