--- a/index.html
+++ b/index.html
@@ -71,27 +71,36 @@
 			</ul>
 		</nav>
 		<div class="aboutme-container">
-				<div class="aboutme-container-box1">
+				<div class="aboutme-container-box1" data-aos="fade-right">
 					<h1>About Me</h1>
 				</div>
-				<div class="aboutme-container-box2">
+				<div class="aboutme-container-box2" data-aos="fade-left">
 					<h3> Hi! I'm Cliff, a third year Information Systems student at Atmajaya Catholic University of Indonesia. Nice to meet you!</h3>
 				</div>
 		</div>
-		</div>
+		<div class="whitespace"></div>	
 		<projects-container>
-			<h1 class="center">Projects</h1>
+			<h1 class="center" data-aos="zoom-in">Projects</h1>
 		</projects-container>
 		<projects-container>
-				<div class="projects-container-box1 bgcolor1" data-aos="fade-right">
-					<h2>Testing1</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<div class="projects-container-box1" data-aos="fade-right">
+					<img class="image" src="media/project1.png">
+						<div class="middle">
+							<a href="https://m.atmajaya.ac.id/web/Konten.aspx?gid=highlight&cid=gipeclosing">
+							<div class="text">
+									GIPE 2020 | National Commission for Research Technology and Innovation website of Namibia
+							</div>
+						</a>
+						</div>
+						<div class="whitespace"></div>
+					<p>
+						Website for the National Commission for Research Technology and Innovation of Namibia, part of the GIPE Project held by Westfälische Hochschule in cooperation with Atmajaya Catholic University of Indonesia, Universidad Católica de San Pablo, and Namibia University of Science and Technology. Part of the backend team.
+					</p>
+				</div>
 				</div>
 				<div class="projects-container-box2" data-aos="fade-left">
 					<h2>Testing2</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<p>bruh</p>
 				</div>
 			</projects-container>
 
