--- a/flap.html
+++ b/flap.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
 	<link rel = 'stylesheet' href="style.css">
