--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
 	<link rel = 'stylesheet' href="style.css">
 	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 </head>
 <body>
 <div class="boredcontainer">
@@ -139,6 +140,7 @@
 		
 	</script> -->
 	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+	<script type="text/javascript" src="slick/slick.min.js"></script>
   <script>
     AOS.init();
   </script>
