--- a/index.html
+++ b/index.html
@@ -1,149 +1,90 @@
 <html>
-<head>
-	<meta charset="UTF-8">
+	<head>
+			<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+		<link rel='stylesheet' href="newstyle.css">
+		<link rel='stylesheet' href="https://unpkg.com/aos@next/dist/aos.css"/>
 
-	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
-	<link rel = 'stylesheet' href="style.css">
-	<link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
-</head>
-<body>
-<div class="boredcontainer">
-	<div class="rellax highest" data-rellax-speed="-1"></div>
-	<div class="rellax front" data-rellax-speed="3"></div>
-	<div class="rellax parallax-el" data-rellax-speed="14">
-	<div class="container-image" data-aos="zoom-in">
-    	<h1 class="strokedtext"> cliffisverybored </h1>
-    		<h1 class="strokedtexthighlight"> cliffisverybored </h1>
-    	<h1 class="strokedtext"> cliffisverybored </h1>
-    		<h1 class="strokedtexthighlight"> cliffisverybored </h1>
-    	<h1 class="strokedtext"> cliffisverybored </h1>
-    		<h1 class="strokedtexthighlight"> cliffisverybored </h1>
-    	<h1 class="strokedtext"> cliffisverybored </h1>
-    </div>
-</div>
-	<div class="rellax before" data-rellax-speed="2"></div>
-	<div class="rellax veryfront" data-rellax-speed="1"></div>
-
-        <div class="container">
-          <div class="row">
-
-            <div class="col-md-offset-1 col-md-9">
-              <div class="lg-green rellax" data-rellax-speed="-4" data-rellax-xs-speed="-3" data-rellax-mobile-speed="-2"
-                data-rellax-tablet-speed="2" style="transform: rotate(45deg);">
-              </div>
-              <div class="sm-green rellax" data-rellax-speed="5" data-rellax-xs-speed="3" data-rellax-mobile-speed="4"
-                data-rellax-tablet-speed="5" style="transform: rotate(45deg);">
-              </div>
-            </div>
-
-            <div class="col-md-offset-2 col-md-1">
-              <div class="sm-purple rellax" data-rellax-speed="2" data-rellax-xs-speed="1" data-rellax-mobile-speed="2"
-                data-rellax-tablet-speed="2" style="transform: rotate(45deg);">
-              </div>
-            </div>
-
-            <div class="col-md-offset-3 col-md-1">
-              <div class="xs-green rellax" data-rellax-speed="5" data-rellax-xs-speed="3" data-rellax-mobile-speed="4"
-                data-rellax-tablet-speed="5" style="transform: rotate(45deg);">
-              </div>
-              <div class="md-green rellax" data-rellax-speed="-1" data-rellax-xs-speed="1" data-rellax-mobile-speed="2"
-                data-rellax-tablet-speed="2" style="transform: rotate(45deg);">
-              </div>
-            </div>
-
-            <div class="col-md-1">
-              <div class="lg-purple rellax" data-rellax-speed="3" data-rellax-xs-speed="2" data-rellax-mobile-speed="2"
-                data-rellax-tablet-speed="3" style="transform: rotate(45deg);">
-              </div>
-            </div>
-       	</div>
-       </div>
-</div>
-
-       <nav class="navTransparent">
-			<p><a href="#top">Cliff Tangel</a></p>
+	</head>
+	<body>
+		 <nav class="navTransparent">
+			<p><a href="#top">CT</a></p>
 			<ul>
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#projects">My Work</a></li>
-				<li><a href="#art">Art</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
-		<div class="aboutme-container">
-				<div class="aboutme-container-box1" data-aos="fade-right">
-					<h1 id="about">About Me</h1>
-				</div>
-				<div class="aboutme-container-box2" data-aos="fade-left">
-					<h3> Hi! I'm Cliff, a third year Information Systems student at Atmajaya Catholic University of Indonesia. Nice to meet you!</h3>
-				</div>
+<section>
+	<div class="main-grid">
+		<main>
+		<div class="rellax title" data-rellax-speed="4">
+			Cliff Tangel
 		</div>
-		<div class="whitespace"></div>	
-		<projects-container id="projects">
-			<h1 class="center" data-aos="zoom-in">Projects</h1>
-		</projects-container>
-		<projects-container>
-				<div class="projects-container-box1" data-aos="fade-right">
+		<div class="rellax location" data-rellax-speed="-3">
+			Jakarta, Indonesia
+		</div>
+				<div class="rellax maface" data-rellax-speed="0"><img src="media/test.png"></div>x
+		</main>
+	</div>
+</section>
+
+<section>
+	<div class="container">
+	<div class="about" id="about"><p>About Me</p></div>
+	<div class="about-content">A sophomore in Atma Jaya Catholic University of Indonesia. Passionate in web development, design, and data science. Love to explore the possibilities of coding and good design combined. A work in progress!</div>
+</div>
+	</section>
+<section>
+	<div class="skills">
+		<div class="item"><img src="media/python.png"></div>
+		<div class="item"><img src="media/symfony.png"></div>
+		<div class="item"><img src="media/laravel.png"></div>
+		<div class="item"><img src="media/node.png"></div>
+	</div>
+</section>
+
+<section>
+	<ul class="flexbox">
+		<li class="flex-info" id="projects"><p>Projects</p>
+			<ul class="projects">
+				<li>
+					<a href="https://eazycee.github.io/ncrst.html">
 					<img class="image" src="media/project1.png">
 						<div class="middle">
-							<a href="https://m.atmajaya.ac.id/web/Konten.aspx?gid=highlight&cid=gipeclosing">
+							
 							<div class="text">
 									GIPE 2020 | Namibia's National Commission for Research Science and Technology website
 							</div>
-						</a>
 						</div>
-						<div class="whitespace"></div>
-					<p>
-						Website for the National Commission for Research Technology and Innovation of Namibia, part of the GIPE Project held by Westfälische Hochschule in cooperation with Atmajaya Catholic University of Indonesia, Universidad Católica de San Pablo, and Namibia University of Science and Technology. Part of the backend team.
-					</p>
-				</div>
-				</div>
-					
-			</projects-container>
-			<div class="pixelbg">
-			<h1> DISCOUNT FLAPPY BIRD </h1>
-				<div class="flap">
-					<div class="button" id="start">Click to start!</div>
-					<div class="game-container">
-					<div class="gameText" id="point"> 0 </div>
-					<div class = "sky">
-						<div class ="bird"></div>
-					</div>
-					<div class="ground"></div>
-</div>
-</div>
-</div>
+						<h1>GIPE 2020 | STI Portal for Namibia's National Commission of Research, Science, and Technology</h1>
+					</a>
+				</li>
+				<li>
+						<h1> ...More to come! </h1>
+				</li>
+			</ul>
+		</li>
+	</ul>
+</section>
 
 <footer>
-			<a href="mailto:clifftangel@gmail.com" target="_blank"><img src="media/icons/mailicon.png" /></a>
-			<a href="https://www.linkedin.com/in/cliff-tangel/" target="_blank"
-				><img src="media/icons/linkedin.png"
-			/></a>
-			<a href="https://www.instagram.com/cliffie.uh/" target="_blank"
-				><img src="media/icons/instagram.png"
-			/></a>
+			<a href="mailto:clifftangel@gmail.com" target="_blank">
+				<img src="media/icons/mailicon.png" /></a>
+			<a href="https://www.linkedin.com/in/cliff-tangel/" target="_blank">
+				<img src="media/icons/linkedin.png"/></a>
+			<a href="https://www.instagram.com/cliffie.uh/" target="_blank">
+				<img src="media/icons/instagram.png"/></a>
 </footer>
 
-
-
 	<script language="javascript" src='js/jquery-3.5.1.min.js' type="text/javascript"></script>
-	<script src="js/scroll.js" type="text/javascript"></script>
+		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 	<script src="rellax.min.js" type="text/javascript"></script>
 	<script src="rellax.js"></script>
 	<script type="text/javascript">
 		var rellax = new Rellax('.rellax');
 	</script>
-	<script language="javascript" src='js/flap.js' type="text/javascript"></script>
-	<!-- <script type="text/javascript">
-		var rellax = new Rellax('.rellax',);
-		
-	</script> -->
-	<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script type="text/javascript" src="slick/slick.min.js"></script>
-  <script>
-    AOS.init();
-  </script>
-
-</body>
+	<script src="js/scroll.js" type="text/javascript"></script>
+	</body>
 </html>
