--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<link rel='stylesheet' href="newstyle.css">
 		<link rel='stylesheet' href="https://unpkg.com/aos@next/dist/aos.css"/>
+		<link rel="stylesheet" type="text/css" href="slick/slick.css" />
+		<link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
 
 	</head>
 	<body>
@@ -13,6 +15,7 @@
 			<ul>
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#projects">My Work</a></li>
+				<li><a href="#art">Digital Art</a></li>
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
@@ -22,7 +25,7 @@
 		<div class="rellax title" data-rellax-speed="4">
 			Cliff Tangel
 		</div>
-		<div class="rellax location" data-rellax-speed="-3">
+		<div class="rellax location" data-rellax-speed="3">
 			Jakarta, Indonesia
 		</div>
 				<div class="rellax maface" data-rellax-speed="0"><img src="media/test.png"></div>x
@@ -33,7 +36,7 @@
 <section>
 	<div class="container">
 	<div class="about" id="about"><p>About Me</p></div>
-	<div class="about-content">A sophomore in Atma Jaya Catholic University of Indonesia. Passionate in web development, design, and data science. Love to explore the possibilities of coding and good design combined. A work in progress!</div>
+	<div class="about-fill">A sophomore in Atma Jaya Catholic University of Indonesia. Passionate in web development, design, and data science. Love to explore the possibilities of coding and good design combined. A work in progress!</div>
 </div>
 	</section>
 <section>
@@ -69,6 +72,44 @@
 	</ul>
 </section>
 
+<div class="flex-info" id="art"><p>Digital Farts</p></div>
+<div class="about-fill">Digital arts I've done for both promotional and recreational purposes.</div>
+<div class="art">
+<section class="center slider">
+	<div>
+		<img src="media/designs/thunderguy.gif">
+	</div>
+	<div>
+		<img src="media/designs/firespirit.gif">
+	</div>
+	<div>
+		<img src="media/designs/1.jpg">
+	</div>
+	<div>
+		<img src="media/designs/2.jpg">
+	</div>
+	<div>
+		<img src="media/designs/3.jpg">
+	</div>
+	<div>
+		<img src="media/designs/4.jpg">
+	</div>
+	<div>
+		<img src="media/designs/5.jpg">
+	</div>
+	<div>
+		<img src="media/designs/6.jpg">
+	</div>
+</section>
+</div>
+
+<div class="footer">
+	<div class="footer-content">
+		<h1>"You have power over your mind — not outside events. Realize this, and you will find strength." ―Marcus Aurelius</h1>
+	</div>
+	<div class="footer-bottom">Designed by Cliff Tangel</div>
+</div>
+
 <footer>
 			<a href="mailto:clifftangel@gmail.com" target="_blank">
 				<img src="media/icons/mailicon.png" /></a>
@@ -86,5 +127,12 @@
 		var rellax = new Rellax('.rellax');
 	</script>
 	<script src="js/scroll.js" type="text/javascript"></script>
+		<script type="text/javascript" src="./slick/slick.js"></script>
+
+	<script type="text/javascript">
+$('.single-item').slick({
+	dots: true
+});
+</script>
 	</body>
 </html>
