--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
-<section>
+<section class="test">
 	<div class="main-grid">
 		<main>
 		<div class="rellax title" data-rellax-speed="4">
@@ -28,27 +28,26 @@
 		<div class="rellax location" data-rellax-speed="3">
 			Jakarta, Indonesia
 		</div>
-				<div class="rellax maface" data-rellax-speed="0"><img src="media/test.png"></div>x
+				<div class="rellax maface" data-rellax-speed="0"><img src="media/test.png"></div>
 		</main>
 	</div>
 </section>
 
-<section>
+<section class="fp">
 	<div class="container">
 	<div class="about" id="about"><p>About Me</p></div>
 	<div class="about-fill">A sophomore in Atma Jaya Catholic University of Indonesia. Passionate in web development, design, and data science. Love to explore the possibilities of coding and good design combined. A work in progress!</div>
 </div>
-	</section>
-<section>
+
+</section>
 	<div class="skills">
 		<div class="item"><img src="media/python.png"></div>
 		<div class="item"><img src="media/symfony.png"></div>
 		<div class="item"><img src="media/laravel.png"></div>
 		<div class="item"><img src="media/node.png"></div>
 	</div>
-</section>
 
-<section>
+<!-- <section class="fp">
 	<ul class="flexbox">
 		<li class="flex-info" id="projects"><p>Projects</p>
 			<ul class="projects">
@@ -70,10 +69,30 @@
 			</ul>
 		</li>
 	</ul>
+</section> -->
+		<div class="flex-info" id="projects"><p>Projects</p></div>
+<section class="fp-80 projects">
+
+<div class="wrapper">
+	<a href="https://eazycee.github.io/ncrst.html">
+	<div class="items">
+		<div class="box img1"></div>
+		<div class="box img-text">
+			<div class="text-area">
+				<h2>GIPE 2020</h2>
+				<h3>Global Intercultural Project Experience</h3>
+				<p>Web Portal for Namibia's National Commission of Research, Science, and Technology</p>
+			</div>
+		</div>
+	</div>
+</a>
+</div>
+
 </section>
 
-<div class="flex-info" id="art"><p>Digital Farts</p></div>
-<div class="about-fill">Digital arts I've done for both promotional and recreational purposes.</div>
+<section class="fp section-gray">
+<div class="art-info" id="art"><p>Digital Farts</p></div>
+<div class="art-fill">Digital arts I've done for both promotional and recreational purposes.</div>
 <div class="art">
 <section class="center slider">
 	<div>
@@ -100,8 +119,10 @@
 	<div>
 		<img src="media/designs/6.jpg">
 	</div>
-</section>
 </div>
+</section>
+</section>
+
 
 <div class="footer">
 	<div class="footer-content">
