--- a/ncrst.html
+++ b/ncrst.html
@@ -4,20 +4,17 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
 		<link rel='stylesheet' href="newstyle.css">
-		<link rel='stylesheet' href="https://unpkg.com/aos@next/dist/aos.css"/>
 
 	</head>
 	<body>
 		 <nav class="navTransparent">
-			<p><a href="https://eazycee.github.io">back</a></p>
+			<p><a href="https://eazycee.github.io">Back</a></p>
 			<ul>
-				<li><a href="https://eazycee.github.io">About Me</a></li>
-				<li><a href="https://eazycee.github.io">My Work</a></li>
-				<li><a href="https://eazycee.github.io">Contact</a></li>
+				<li><a href="https://eazycee.github.io">Profile</a></li>
 			</ul>
 		</nav>
 
-	<div class="title">GIPE | STI Portal</div>
+	<div class="title-ncrst">GIPE | STI Portal</div>
 	<div class="content">
 		<p>GIPE stands for Global Intercultural Projet experience, where students from 4 universities ( Indonesia, Germany, Peru, and Namibia) work together on one project. This year, we worked on a STI (Science, Technology, and Innovations) Web Portal for the National Commission of Research, Science and Technology of Namibia. It was an amazing experience. Eventhough we had to work online because of the pandemic, my 4 teammates and I, alongside teams from those other 4 countries struggled together in designing, implementing, testing, and launching a web application using Symfony Framework.</p>
 
@@ -29,7 +26,7 @@
 	</div>
 
 
-	<ul class="flexbox">
+	<!-- <ul class="flexbox">
 		<li class="flex-info" id="projects">
 			<ul class="projects">
 				<li>
@@ -46,13 +43,36 @@
 					<img class="image" src="media/zoom.jpg">
 					<div class="middle">
 						<div class="text">
-						</div>
+							<h1>One of our zoom meetings</h1>
 					</div>
-					<h1>One of our zoom meetings</h1>
+				</div>
 				</li>
 			</ul>
 		</li>
-	</ul>
+	</ul> -->
+
+	<section class="fp projects">
+<div class="wrapper">
+	<div class="items-ncrst">
+		<div class="box img1"></div>
+		<div class="box img-text">
+			<div class="text-area">
+				<p>The finished website</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="items-ncrst">
+		<div class="box zoomimg"></div>
+		<div class="box img-text">
+			<div class="text-area">
+				<p>One of our zoom meetings</p>
+			</div>
+		</div>
+	</div>
+</div>
+
+</section>
 	<footer>
 			<a href="mailto:clifftangel@gmail.com" target="_blank">
 				<img src="media/icons/mailicon.png" /></a>
