--- a/flap.html
+++ b/flap.html
@@ -4,8 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel = 'stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.min.css'>
-	<link rel = 'stylesheet' href="style.css">
+	<link rel = 'stylesheet' href="newstyle.css">
 </head>
 <body>
 <nav class="back-arrow">
@@ -13,13 +12,10 @@
                 <div><a href="/#top"><img src="media/icons/back.png" /></a></div>
             </div>
         </nav>
-        <nav class="navColor">
-			<p><a href="#top">Cliff Tangel</a></p>
+		 <nav class="navTransparent">
+			<p><a href="https://eazycee.github.io">Back</a></p>
 			<ul>
-				<li><a href="#about">About Me</a></li>
-				<li><a href="#work">My Work</a></li>
-				<li><a href="#art">Art</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="https://eazycee.github.io">Profile</a></li>
 			</ul>
 		</nav>
 			<div class="button" id="start"><h1>Click to start!</h1></div>
@@ -36,6 +32,7 @@
 </div>
 </div>
 </body>
+<script language="javascript" src='js/jquery-3.5.1.min.js' type="text/javascript"></script>
 <script language="javascript" src='js/flap.js' type="text/javascript"></script>
 <script src="js/scroll.js" type="text/javascript"></script>
 </html>
