--- a/index.html
+++ b/index.html
@@ -86,6 +86,18 @@
 		</div>
 	</div>
 </a>
+<a href="https://eazycee.github.io/flap.html">
+	<div class="items">
+		<div class="box img2"></div>
+		<div class="box img-text">
+			<div class="text-area">
+				<h2>Discount Flappy Bird</h2>
+				<h3>A really bad flappy bird ripoff</h3>
+				<p>JavaScript & HTML</p>
+			</div>
+		</div>
+	</div>
+</a>
 </div>
 
 </section>
@@ -118,6 +130,12 @@
 	</div>
 	<div>
 		<img src="media/designs/6.jpg">
+	</div>
+	<div>
+		<img src="media/designs/7.jpg">
+	</div>
+	<div>
+		<img src="media/designs/8.jpg">
 	</div>
 </div>
 </section>
