--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	</div>
 </section>
 
-<section class="fp">
+<section class="fp padding">
 	<div class="container">
 	<div class="about" id="about"><p>About Me</p></div>
 	<div class="about-fill">A sophomore in Atma Jaya Catholic University of Indonesia. Passionate in web development, design, and data science. Love to explore the possibilities of coding and good design combined. A work in progress!</div>
@@ -47,29 +47,6 @@
 		<div class="item"><img src="media/node.png"></div>
 	</div>
 
-<!-- <section class="fp">
-	<ul class="flexbox">
-		<li class="flex-info" id="projects"><p>Projects</p>
-			<ul class="projects">
-				<li>
-					<a href="https://eazycee.github.io/ncrst.html">
-					<img class="image" src="media/project1.png">
-						<div class="middle">
-							
-							<div class="text">
-									GIPE 2020 | Namibia's National Commission for Research Science and Technology website
-							</div>
-						</div>
-						<h1>GIPE 2020 | STI Portal for Namibia's National Commission of Research, Science, and Technology</h1>
-					</a>
-				</li>
-				<li>
-						<h1> ...More to come! </h1>
-				</li>
-			</ul>
-		</li>
-	</ul>
-</section> -->
 		<div class="flex-info" id="projects"><p>Projects</p></div>
 <section class="fp-80 projects">
 
