--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
-<section class="test">
+<section class="test fp">
 	<div class="main-grid">
 		<main>
 		<div class="rellax title" data-rellax-speed="4">
