--- a/ncrst.html
+++ b/ncrst.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<title>GIPE</title>
 			<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -25,31 +26,6 @@
 	<a href="https://m.atmajaya.ac.id/web/Konten.aspx?gid=highlight&cid=gipeclosing">University Article</a>
 	</div>
 
-
-	<!-- <ul class="flexbox">
-		<li class="flex-info" id="projects">
-			<ul class="projects">
-				<li>
-					<img class="image" src="media/project1.png">
-						<div class="middle">
-							
-							<div class="text">
-									GIPE 2020 | Namibia's National Commission for Research Science and Technology website
-							</div>
-						</div>
-						<h1>Finished product frontend</h1>
-				</li>
-				<li>
-					<img class="image" src="media/zoom.jpg">
-					<div class="middle">
-						<div class="text">
-							<h1>One of our zoom meetings</h1>
-					</div>
-				</div>
-				</li>
-			</ul>
-		</li>
-	</ul> -->
 
 	<section class="fp projects">
 <div class="wrapper">
