--- a/ncrst.html
+++ b/ncrst.html
@@ -22,12 +22,13 @@
 		<p> I was part of the Backend team, therefore responsible for the development of the databases, and also the launching of the finished web app. We also had alot of fun using Doctrine ORM, which helped alot in designing and implementing the tables and attributes, together with each association.</p>
 
 		<p> I learned alot from this project, from version control to test based development and the processes to make a fully functioning web application. But the most precious thing I obtained was connections with good, honest, and hardworking people from all over the world.</p>
-		
-	<a href="https://m.atmajaya.ac.id/web/Konten.aspx?gid=highlight&cid=gipeclosing">University Article</a>
+		<a href="https://m.atmajaya.ac.id/web/Konten.aspx?gid=highlight&cid=gipeclosing" class="button-ncrst">University Article</a>
 	</div>
 
 
+
 	<section class="fp projects">
+
 <div class="wrapper">
 	<div class="items-ncrst">
 		<div class="box img1"></div>
@@ -59,12 +60,6 @@
 </footer>
 
 	<script language="javascript" src='js/jquery-3.5.1.min.js' type="text/javascript"></script>
-		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-	<script src="rellax.min.js" type="text/javascript"></script>
-	<script src="rellax.js"></script>
-	<script type="text/javascript">
-		var rellax = new Rellax('.rellax');
-	</script>
 	<script src="js/scroll.js" type="text/javascript"></script>
 	</body>
 </html>
