--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		 <nav class="navTransparent">
-			<p><a href="#top">CT</a></p>
+			<p>CT</p>
 			<ul>
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#projects">My Work</a></li>
@@ -37,7 +37,9 @@
 <section class="fp padding">
 	<div class="container">
 	<div class="about" id="about"><p>About Me</p></div>
-	<div class="about-fill">A sophomore in Atma Jaya Catholic University of Indonesia. Passionate in web development, design, and data science. Love to explore the possibilities of coding and good design combined. A work in progress!</div>
+	<div class="about-fill">A sophomore in Atma Jaya Catholic University of Indonesia. </div>
+	<div class="about-fill">Passionate in web development, design, and data science. Loves to explore the possibilities of coding and good design combined.</div>
+	 <div class="about-fill">A work in progress!</div>
 </div>
 
 </section>
@@ -84,7 +86,7 @@
 <div class="art-info" id="art"><p>Digital Farts</p></div>
 <div class="art-fill">Digital arts I've done for both promotional and recreational purposes.</div>
 <div class="art">
-<section class="center slider">
+<section class="center slider margin-top">
 	<div>
 		<img src="media/designs/thunderguy.gif">
 	</div>
