--- a/index.html
+++ b/index.html
@@ -51,35 +51,62 @@
 	</div>
 
 		<div class="flex-info" id="projects"><p>Projects</p></div>
-<section class="fp-80 projects">
+<section class="projects">
 
 <div class="wrapper">
 	<a href="https://eazycee.github.io/ncrst.html">
-	<div class="items">
-		<div class="box img1"></div>
-		<div class="box img-text">
-			<div class="text-area">
-				<h2>GIPE 2020</h2>
-				<h3>Global Intercultural Project Experience</h3>
-				<p>Web Portal for Namibia's National Commission of Research, Science, and Technology</p>
+		<div class="items">
+			<div class="box img1"></div>
+			<div class="box img-text">
+				<div class="text-area">
+					<h2>GIPE 2020</h2>
+					<h3>Global Intercultural Project Experience</h3>
+					<p>Web Portal for Namibia's National Commission of Research, Science, and Technology</p>
+				</div>
 			</div>
 		</div>
-	</div>
-</a>
-<a href="https://eazycee.github.io/flap.html">
-	<div class="items">
-		<div class="box img2"></div>
-		<div class="box img-text">
-			<div class="text-area">
-				<h2>Discount Flappy Bird</h2>
-				<h3>A really bad flappy bird ripoff</h3>
-				<p>JavaScript & HTML</p>
+	</a>
+	<a href="https://eazycee.github.io/flap.html">
+		<div class="items">
+			<div class="box img2"></div>
+			<div class="box img-text">
+				<div class="text-area">
+					<h2>Discount Flappy Bird</h2>
+					<h3>A really bad flappy bird ripoff</h3>
+					<p>JavaScript & HTML</p>
+				</div>
 			</div>
 		</div>
-	</div>
-</a>
+	</a>
 </div>
-
+</section>
+<section class="projects">
+<div class="wrapper">
+	<a href="https://eazycee.github.io/bangkit.html">
+		<div class="items">
+			<div class="box img3"></div>
+			<div class="box img-text">
+				<div class="text-area">
+					<h2>Bangkit 2021</h2>
+					<h3>Growing world class talent by learning from tech experts from leading Indonesian companies</h3>
+					<p>Kotlin</p>
+				</div>
+			</div>
+		</div>
+	</a>
+	<a href="https://eazycee.github.io/torem.html">
+		<div class="items">
+			<div class="box img4"></div>
+			<div class="box img-text">
+				<div class="text-area">
+					<h2>Torem</h2>
+					<h3>A travel plan sharing Android application to improve Indonesia's tourism</h3>
+					<p>Bangkit 2021 Capstone Project</p>
+				</div>
+			</div>
+		</div>
+	</a>
+</div>
 </section>
 
 <section class="fp section-gray">
@@ -103,10 +130,10 @@
 		<img src="media/designs/3.jpg">
 	</div>
 	<div>
-		<img src="media/designs/4.jpg">
+		<img src="media/designs/4.png">
 	</div>
 	<div>
-		<img src="media/designs/5.jpg">
+		<img src="media/designs/5.png">
 	</div>
 	<div>
 		<img src="media/designs/6.jpg">
