--- a/torem.html
+++ b/torem.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>GIPE</title>
+		<title>Torem</title>
 			<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
@@ -15,14 +15,14 @@
 			</ul>
 		</nav>
 
-	<div class="title-ncrst">GIPE | STI Portal</div>
+	<div class="title-ncrst">Torem</div>
 	<div class="content">
-		<p>GIPE stands for Global Intercultural Projet experience, where students from 4 universities ( Indonesia, Germany, Peru, and Namibia) work together on one project. This year, we worked on a STI (Science, Technology, and Innovations) Web Portal for the National Commission of Research, Science and Technology of Namibia. It was an amazing experience. Eventhough we had to work online because of the pandemic, my 4 teammates and I, alongside teams from those other 4 countries struggled together in designing, implementing, testing, and launching a web application using Symfony Framework.</p>
+		<p>An Android mobile application to create, share, and explore travel plans created by real users and help ease the process of travelling in unknown or now places. This project was created as a capstone project of Bangkit 2021.</p>
+		<p>
+		Torem was developed by a team of 6 people, divided equally from 3 learning paths which are Cloud Computing, Mobile Development, and Machine Learning. My teammate, Steven Elnatan Santoso, and I was responsible in developing the Android application itself. You can check out the short demo by clicking <a href="https://www.linkedin.com/posts/cliff-tangel_tourism-share-adventure-activity-6811229643060891648-MLfH">here</a>
+		</p>
 
-		<p> I was part of the Backend team, therefore responsible for the development of the databases, and also the launching of the finished web app. We also had alot of fun using Doctrine ORM, which helped alot in designing and implementing the tables and attributes, together with each association.</p>
-
-		<p> I learned alot from this project, from version control to test based development and the processes to make a fully functioning web application. But the most precious thing I obtained was connections with good, honest, and hardworking people from all over the world.</p>
-		<a href="https://m.atmajaya.ac.id/web/Konten.aspx?gid=highlight&cid=gipeclosing" class="button-ncrst">University Article</a>
+		<p>You can also check out its' repository and download the application from the provided links below!</p>
 	</div>
 
 
