--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
-<section class="test fp">
+<section class="test fphead">
 	<div class="main-grid">
 		<main>
 		<div class="rellax title" data-rellax-speed="4">
@@ -51,6 +51,8 @@
 	</div>
 
 		<div class="flex-info" id="projects"><p>Projects</p></div>
+
+
 <section class="projects">
 
 <div class="wrapper">
@@ -109,7 +111,15 @@
 </div>
 </section>
 
+<section>
+	<div class="wave" id="wave1" style="--i:1;"></div>
+	<div class="wave" id="wave2" style="--i:2;"></div>
+	<div class="wave" id="wave3" style="--i:3;"></div>
+	<div class="wave" id="wave4" style="--i:4;"></div>
+</section>
+
 <section class="fp section-gray">
+
 <div class="art-info" id="art"><p>Digital Farts</p></div>
 <div class="art-fill">Digital arts I've done for both promotional and recreational purposes.</div>
 <div class="art">
@@ -148,22 +158,34 @@
 </section>
 </section>
 
-
-<div class="footer">
-	<div class="footer-content">
-		<h1>"You have power over your mind — not outside events. Realize this, and you will find strength." ―Marcus Aurelius</h1>
+<footer>
+<div class="container">
+	<div class="sec aboutme">
+		<h2>About Me</h2>
+		<p>A 21 year old junior web and mobile developer with international experience who is obsessed with exploring the possibilities of combining good design and code.</p>
 	</div>
-	<div class="footer-bottom">Designed by Cliff Tangel</div>
+	<div class="sec quicklinks">
+		<h2>Links</h2>
+		<ul>
+			<li><a href="#about">About Me</a></li>
+			<li><a href="#projects">My Work</a></li>
+			<li><a href="#art">Digital Art</a></li>
+			<li><a href="#contact">Contact</a></li>
+		</ul>
+	</div>
 </div>
 
-<footer>
+</footer>
+<div class="contacts">
 			<a href="mailto:clifftangel@gmail.com" target="_blank">
 				<img src="media/icons/mailicon.png" /></a>
 			<a href="https://www.linkedin.com/in/cliff-tangel/" target="_blank">
 				<img src="media/icons/linkedin.png"/></a>
 			<a href="https://www.instagram.com/cliffie.uh/" target="_blank">
-				<img src="media/icons/instagram.png"/></a>
-</footer>
+				<img src="media/icons/instagram.png"/></a>	
+</div>
+
+
 
 	<script language="javascript" src='js/jquery-3.5.1.min.js' type="text/javascript"></script>
 		<script src="https://unpkg.com/aos@next/dist/aos.js"></script>
@@ -172,6 +194,7 @@
 	<script type="text/javascript">
 		var rellax = new Rellax('.rellax');
 	</script>
+	<script type="text/javascript" src="js/wave.js"></script>
 	<script src="js/scroll.js" type="text/javascript"></script>
 		<script type="text/javascript" src="./slick/slick.js"></script>
 
