--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 				<li><a href="#about">About Me</a></li>
 				<li><a href="#projects">My Work</a></li>
 				<li><a href="#art">Digital Art</a></li>
-				<li><a href="#contact">Contact</a></li>
 			</ul>
 		</nav>
 <section class="test fphead">
@@ -36,12 +35,13 @@
 
 <section class="fp padding">
 	<div class="container">
+		<div class="cont1">
 	<div class="about" id="about"><p>About Me</p></div>
 	<div class="about-fill">A sophomore in Atma Jaya Catholic University of Indonesia. </div>
 	<div class="about-fill">Passionate in web development, design, and data science. Loves to explore the possibilities of coding and good design combined.</div>
 	 <div class="about-fill">A work in progress!</div>
 </div>
-
+</div>
 </section>
 	<div class="skills">
 		<div class="item"><img src="media/python.png"></div>
